# fomobot

./: .gitattributes  .gitignore  ARTICLE_CHECKLIST.md  README.md  SETUP.md  benchmark.py  benchmark_iterrows.py  main.py  pyproject.toml  test_itertuples.py
backend-realestate/: .env.example  .gitignore  Dockerfile  alembic.ini  benchmark.py  benchmark_complex_agg.py  docker-compose.yml  pyproject.toml  railway.toml
backend-realestate/alembic/: env.py
backend-realestate/alembic/versions/: 20260626_0001_initial_schema.py  20260626_0002_complex_ranking.py  20260630_0003_add_deal_amount_to_ranking.py  20260710_0004_add_re_complex_news.py  20260713_0005_region_news.py
backend-realestate/src/realestate/: config.py  main.py  segments.py  sentry_init.py
backend-realestate/src/realestate/api/: news.py  rankings.py  region.py  search.py
backend-realestate/src/realestate/batch/: aggregate.py  collect.py  collect_news.py  complex_aggregate.py  complex_rankings.py  compute_rankings.py  normalize.py  regions.py  scheduler.py
backend-realestate/src/realestate/db/: crud.py  models.py  session.py
backend-realestate/src/realestate/jobs/: backfill.py  collect_complex_news.py  incremental.py
backend-realestate/src/realestate/schemas/: news.py  rankings.py  region.py  search.py
backend-realestate/tests/: conftest.py  test_collect.py  test_complex_aggregate.py  test_complex_rankings.py  test_compute_rankings.py  test_crud.py  test_news_relevance.py  test_normalize.py  test_regions.py  test_search.py
backend-stock/: .env.example  Dockerfile  backfill_rankings.py  docker-compose.yml  pyproject.toml  railway.toml
backend-stock/alembic/: env.py
backend-stock/alembic/versions/: 20260623_0002_alter_ranking_snapshot_name_length.py  20260629_0003_add_securities_master.py  20260701_0004_add_close_price_at_snapshot.py  20260702_0005_add_market_cap_to_ranking_snapshot.py  20260706_0006_add_order_dir.py  20260710_0007_add_stock_news.py  20260713_0008_add_market_breadth_daily.py
backend-stock/scripts/: backfill_breadth.py  backfill_rankings.py  check_rankings.py  init_history.py  restore_history.py  seed_dummy.py
backend-stock/src/fomobot/: config.py  main.py  sentry_init.py
backend-stock/tests/: test_adjusted_close.py  test_backtest.py  test_breadth.py  test_breadth_api.py  test_calculator.py  test_collect_job.py  test_compute_rankings.py  test_config_cors.py  test_cors.py  test_crud.py  test_gap_fill.py  test_news_relevance.py  test_noise_filter.py  test_search.py
(+136 files in other folders)
