[project]
name = "fomobot"
version = "0.1.0"
description = "KOSPI/NASDAQ 기간별 상승률 랭킹 API (교육·재미 목적)"
requires-python = ">=3.12"
dependencies = [
    # Web
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    # DB
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.0",
    # Settings
    "pydantic-settings>=2.3.0",
    "python-dotenv>=1.0.0",
    # Data
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "pykrx>=1.2.8",
    "yfinance>=0.2.40",
    # Scheduler
    "apscheduler>=3.10.0",
    # Retry
    "tenacity>=8.3.0",
    # HTTP
    "httpx>=0.27.0",
    # Monitoring
    "sentry-sdk[fastapi]>=2.0.0",
    # pykrx가 pkg_resources를 사용함. setuptools>=70에서 pkg_resources가 제거되므로 <70 고정
    "setuptools>=69.5.1,<70",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fomobot"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
]
